# geojson-server

./: .env  Cargo.toml  Rocket.toml  init-postgis.sh
migrations/2023-08-21-153949_add_geojsons/: down.sql  up.sql
scripts/: script.sh
src/: main.rs  models.rs  schema.rs
src/routes/: geojson.rs  health_check.rs  mod.rs
