[package]
name = "geojson-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version="0.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "json"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "r2d2"] }